# wasm-link

./: .gitignore  AGENTS-plan.md  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  flake.nix  shell.nix
.github/workflows/: ci.yml
agent-docs/: conventions.md  philosophy.md  structure.md  testing.md  writing-documentation.md
capnp/: common.capnp  manifest.capnp
capnp/common/: interface.capnp  plugin.capnp  version.capnp
capnp/exports/: bridge.capnp
capnp/manifest/: interface_manifest.capnp  plugin_manifest.capnp
src/: binding.rs  capnp.rs  cardinality.rs  cardinality_tests.rs  concurrent.rs  discovery.rs  dispatch_error.rs  exports.rs  initialisation.rs  interface.rs  interface_tests.rs  lib.rs  linker.rs  linker_tests.rs  loading.rs  main.rs  plugin.rs  plugin_instance.rs  plugin_instance_tests.rs  plugin_tree.rs  plugin_tree_head.rs  remap.rs  resource_wrapper.rs  resource_wrapper_tests.rs  runtime_binding.rs  socket.rs  startup.rs  sync.rs  sync_binding.rs  sync_plugin.rs  types.rs  utils.rs
src/discovery/: discover_all.rs  interface_data.rs  plugin_data.rs
src/exports/: bridge.rs  test.rs  test_exports.rs
src/initialisation/: discovery.rs  loading.rs  types.rs
src/loading/: dispatch.rs  linker.rs  load_plugin.rs  load_plugin_tree.rs  load_socket.rs  plugin_instance.rs  resource_wrapper.rs  socket.rs
src/runtime/: plugin_instance.rs
src/startup/: interface_decoder.rs  plugin_decoder.rs  plugin_deserialiser.rs  plugin_discovery.rs  plugin_loader.rs  plugin_parser.rs  plugin_preprocessor.rs
src/types/: interface_id.rs  plugin_id.rs
src/utils/: map_scan.rs  merge.rs  partial_success.rs  produce_warning.rs  result_list.rs
test_macros/: Cargo.toml
test_macros/src/: lib.rs
tests/: cardinality_tests.rs  complex_topology_tests.rs  dispatch_error_tests.rs  dispatching_tests.rs  error_handling_tests.rs  init_error_tests.rs  load_error_tests.rs  loading_tests.rs  resource_limit_tests.rs  resource_tests.rs  tests.rs  wit_contract_tests.rs
tests/complex_topology/: deep_nesting.rs  diamond_dependency.rs  multiple_sockets.rs  shared_dependency.rs  three_level_chain.rs
tests/dispatch_error/: invalid_argument_list.rs  invalid_function.rs  invalid_interface.rs  (+1 more)
wit/: wasm-link.wit
(+343 files in other folders)
