[package]
name = "wasm_compose"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
wasmtime = "40.0"
thiserror = "1.0"
itertools = "0.14.0"
pipe-trait = "0.4.0"

[dev-dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
test_macros = { path = "test_macros" }
wit-parser = "0.244.0"
anyhow = "1.0.100" #required because of wit-parser

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
uninlined_format_args = "allow"
match_bool = "allow"
unnested_or_patterns = "allow"
must_use_candidate = "allow"
