[package]
name = "wasm-link"
version = "0.1.0"
authors = ["Forder7935"]
edition = "2021"
rust-version = "1.90.0"
description = "A WebAssembly plugin runtime based around Wasmtime intended for building fully modular applications"
documentation = "https://docs.rs/wasm-link"
readme = "README.md"
repository = "https://github.com/forder7935/wasm-link"
license = "MIT OR Apache-2.0"
keywords = ["wasm", "webassembly", "plugin", "component-model", "modular"]
categories = ["wasm"]
include = [
	"src/*",
	"tests/*",
	"README.md",
	"LICENSE-APACHE",
	"LICENSE-MIT",
]

[dependencies]
wasmtime = "41.0"
thiserror = "1.0"
itertools = "0.14.0"
pipe-trait = "0.4.0"
nonempty-collections = "1.3"

[dev-dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
wit-parser = "0.244.0"
anyhow = "1.0.100" #required because of wit-parser
once_cell = "1.21.3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
uninlined_format_args = "allow"
match_bool = "allow"
unnested_or_patterns = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
